  memory leak: the memory occupied by DAs was not freed on resolution
  change. (RFB)

2014-05-05
- aes/gemstart.S: Use AES process 0 supervisor stack when loading DAs &
  desktop instead of separate stack. (RFB)
- bios/disk.c: Reduce MAXPHYSSECTSIZE to 512 to save 3K of RAM space. (RFB)

2014-05-06
- aes/gemctrl.c aes/geminit.c aes/gemlib.h: Dynamically allocate process
  structures for DAs (saves RAM). (RFB)

2014-05-07
- bdos/bdosmain.c bdos/fsbuf.c bios/blkdev.c bios/blkdev.h bios/tosvars.h
  include/ahdi.h: Dynamically allocate sector buffers (saves RAM). (RFB)

2014-05-08
- aes/gemflag.c doc/bugs.txt: Prevent window semaphore from going negative
  (fixes 7up exit bug). (RFB)

2014-05-09
- aes/gemgraf.c aes/gemgraf.h aes/gemoblib.c aes/gemwmlib.c desk/deskmain.c
  include/obdefs.h tools/erd.c: Code cleanup: fixup types of some TEDINFO
  fields. (RFB)
- aes/gemlib.h aes/gemwmlib.c: Initialise window name & info fields to
  empty strings. (RFB)

2014-05-18
- bios/blkdev.c bios/blkdev.h: Don't login a drive with a logical sector
  size too large for the buffers in the BCB chain. (RFB)

2014-05-21
- bdos/fsio.c: Code cleanup: use memcpy() instead of custom code. (RFB)

2014-05-22
- aes/optimize.c aes/optimize.h desk/deskdir.c desk/deskinf.c: Code
  cleanup: use new function inf_numset() to simplify code. (RFB)

2014-05-24
- desk/deskdir.c desk/deskdir.h desk/deskinf.c: Code cleanup: simplify
  args to d_doop(). (RFB)

2014-05-25
- desk/deskinf.c: Code cleanup: refactor inf_fifo(). (RFB)
- desk/deskdir.c: Code cleanup: don't assume OP_COUNT is zero. (RFB)
- desk/deskdir.c desk/deskdir.h desk/deskfun.c: Code cleanup: avoid
  unnecessary scans of pathname. (RFB)
- desk/deskdir.c desk/deskdir.h desk/deskfun.c desk/desksupp.c: Create
  last_separator() function to scan for last backslash in pathname. (RFB)

2014-05-26
- desk/deskinf.c: Small refactoring for tidyness & reduced code size. (RFB)
- desk/deskinf.c: Fix compiler warning. (RFB)